--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "ember-frost-test": "1.0.0",
     "ember-hook": "1.4.1",
     "ember-load-initializers": "^0.5.1",
+    "ember-lodash-shim": "1.0.1",
     "ember-prop-types": "3.4.0",
     "ember-redux": "1.10.0",
     "ember-resolver": "^2.0.3",
+    "ember-seamless-immutable-shim": "1.0.1",
     "ember-sinon": "0.6.0",
     "ember-spread": "1.0.0",
     "ember-test-utils": "1.5.0",
@@ -54,8 +56,10 @@
     "eslint": "^3.13.0",
     "eslint-config-frost-standard": "^5.3.2",
     "loader.js": "^4.0.1",
+    "lodash-es": "4.15.0",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
+    "seamless-immutable": "6.1.1",
     "sinon-chai": "^2.8.0"
   },
   "keywords": [
