--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-mocha": "0.13.1",
     "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "6.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-computed-decorators": "0.2.2",
