--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ember-resolver": "^2.0.3",
     "ember-seamless-immutable-shim": "1.0.1",
     "ember-sinon": "0.6.0",
+    "ember-sortable": "1.9.1",
     "ember-spread": "1.0.0",
     "ember-test-utils": "1.5.0",
     "ember-truth-helpers": "1.3.0",
