Styling and demo page tweaks.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-hook": "1.4.1",
     "ember-load-initializers": "^0.5.1",
     "ember-lodash-shim": "1.0.1",
+    "ember-prism": "0.0.8",
     "ember-prop-types": "3.4.0",
     "ember-redux": "1.10.0",
     "ember-resolver": "^2.0.3",
@@ -57,6 +58,7 @@
     "ember-try": "^0.2.2",
     "eslint": "^3.13.0",
     "eslint-config-frost-standard": "^5.3.2",
+    "ivy-codemirror": "2.0.3",
     "loader.js": "^4.0.1",
     "lodash-es": "4.15.0",
     "redux": "3.6.0",
