--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "ember-mocha-adapter": "~0.3.1",
-    "codemirror": "~5.15.0",
-    "prism": "^1.6.0"
+    "codemirror": "~5.15.0"
   }
 }
