--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   },
   "scripts": {
     "build": "ember build",
-    "lint": "./node_modules/.bin/eslint addon/**/*.js tests/**/*.js",
     "start": "ember server",
-    "test": "ember try:testall"
+    "coverage": "COVERAGE=true ember test",
+    "lint": "npm run lint-js && npm run lint-md && npm run lint-sass",
+    "lint-js": "eslint *.js addon app blueprints config test-support tests",
+    "lint-md": "remark *.md",
+    "lint-sass": "sass-lint -v -q",
+    "test": "npm run lint && npm run coverage"
   },
   "repository": "",
   "engines": {
@@ -20,7 +24,6 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
-    "bucket-duck": "0.0.1",
     "chai-jquery": "^2.0.0",
     "ember-ajax": "0.7.1",
     "ember-browserify": "1.1.13",
@@ -45,14 +48,16 @@
     "ember-frost-test": "1.0.0",
     "ember-hook": "1.4.1",
     "ember-load-initializers": "^0.5.1",
-    "ember-lodash-shim": "1.0.1",
+    "ember-lodash-shim": "1.1.0",
     "ember-prop-types": "3.4.0",
     "ember-redux": "1.10.0",
+    "ember-redux-shim": "1.0.0",
     "ember-resolver": "^2.0.3",
     "ember-seamless-immutable-shim": "1.0.1",
     "ember-sinon": "0.6.0",
     "ember-sortable": "1.9.1",
     "ember-spread": "1.0.0",
+    "ember-symbol-observable": "0.1.2",
     "ember-test-utils": "1.5.0",
     "ember-truth-helpers": "1.3.0",
     "ember-try": "^0.2.2",
@@ -60,9 +65,12 @@
     "eslint-config-frost-standard": "^5.3.2",
     "ivy-codemirror": "2.0.3",
     "loader.js": "^4.0.1",
-    "lodash-es": "4.15.0",
+    "lodash-es": "4.17.4",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
+    "remark-cli": "^2.1.0",
+    "remark-lint": "^5.4.0",
+    "sass-lint": "^1.10.2",
     "seamless-immutable": "6.1.1",
     "sinon-chai": "^2.8.0"
   },
