--- a/.remarkrc
+++ b/.remarkrc
@@ -2,7 +2,7 @@
   "plugins": {
     "lint": {
       "list-item-indent": false,
-      "maximum-line-length": false,
+      "maximum-line-length": 119,
       "no-duplicate-headings": false,
       "no-multiple-toplevel-headings": false
     }
