--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
   },
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
     "coverage": "COVERAGE=true ember test",
-    "lint": "npm run lint-js && npm run lint-md && npm run lint-sass",
-    "lint-js": "eslint *.js addon app blueprints config test-support tests",
-    "lint-md": "remark *.md",
-    "lint-sass": "sass-lint -v -q",
+    "lint": "lint-all-the-things",
+    "start": "ember server",
     "test": "npm run lint && npm run coverage"
   },
   "repository": "git@github.com:ciena-frost/ember-frost-buckets.git",
@@ -59,19 +56,14 @@
     "ember-sortable": "1.9.1",
     "ember-spread": "1.0.0",
     "ember-symbol-observable": "0.1.2",
-    "ember-test-utils": "1.5.0",
+    "ember-test-utils": "1.11.0",
     "ember-truth-helpers": "1.3.0",
     "ember-try": "^0.2.2",
-    "eslint": "^3.13.0",
-    "eslint-config-frost-standard": "^5.3.2",
     "ivy-codemirror": "2.0.3",
     "loader.js": "^4.0.1",
     "lodash-es": "4.17.4",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
-    "remark-cli": "^2.1.0",
-    "remark-lint": "^5.4.0",
-    "sass-lint": "^1.10.2",
     "seamless-immutable": "6.1.1",
     "sinon-chai": "^2.8.0"
   },
