--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "build": "ember build",
-    "coverage": "COVERAGE=true ember test",
     "lint": "lint-all-the-things",
     "start": "ember server",
-    "test": "npm run lint && npm run coverage"
+    "test": "npm run lint && npm run test-addon",
+    "test-addon": "EMBER_TRY_SCENARIO=${EMBER_TRY_SCENARIO:=default} && ember try:one $EMBER_TRY_SCENARIO --- COVERAGE=true ember test"
   },
   "repository": "git@github.com:ciena-frost/ember-frost-buckets.git",
   "engines": {
