--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ember-cli": "2.5.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-chai": "0.3.2",
-    "ember-cli-code-coverage": "^0.3.5",
+    "ember-cli-code-coverage": "0.3.5",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
