--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-computed-decorators": "0.3.0",
     "ember-concurrency": "~0.7.17",
+    "ember-browserify": "1.1.13",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-elsewhere": "0.4.1",
     "ember-export-application-global": "^1.0.5",
@@ -43,7 +44,7 @@
     "ember-hook": "^1.4.1",
     "ember-load-initializers": "^0.6.0",
     "ember-lodash-shim": "1.1.0",
-    "ember-prop-types": "^3.11.0",
+    "ember-prop-types": "3.4.0",
     "ember-redux": "1.10.0",
     "ember-redux-shim": "1.0.0",
     "ember-resolver": "^2.0.3",
@@ -51,7 +52,7 @@
     "ember-sinon": "0.6.0",
     "ember-sortable": "1.9.1",
     "ember-source": "~2.12.0",
-    "ember-spread": "^1.0.0",
+    "ember-spread": "1.0.0",
     "ember-symbol-observable": "0.1.2",
     "ember-test-utils": "1.11.0",
     "ember-truth-helpers": "1.3.0",
