--- a/package.json
+++ b/package.json
@@ -15,31 +15,32 @@
   },
   "repository": "git@github.com:ciena-frost/ember-frost-buckets.git",
   "engines": {
-    "node": ">= 6.0.0"
+    "node": ">= 5.0.0"
   },
   "author": "Andres Gonzalez (https://github.com/agonza40)",
   "license": "MIT",
   "devDependencies": {
+    "ember-cli-sass": "^5.6.0",
     "broccoli-asset-rev": "^2.4.5",
     "chai-jquery": "^2.0.0",
     "ember-ajax": "^2.4.1",
+    "ember-browserify": "1.1.13",
     "ember-cli": "2.12.3",
     "ember-cli-chai": "0.3.2",
-    "ember-cli-code-coverage": "0.3.12",
+    "ember-cli-code-coverage": "0.3.5",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-mocha": "0.13.2",
+    "ember-cli-mocha": "0.13.1",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-computed-decorators": "0.3.0",
-    "ember-concurrency": "~0.7.17",
-    "ember-browserify": "1.1.13",
+    "ember-computed-decorators": "0.2.2",
+    "ember-concurrency": "0.7.17",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-elsewhere": "0.4.1",
     "ember-export-application-global": "^1.0.5",
-    "ember-frost-core": "1.23.2",
+    "ember-frost-core": "1.23.3",
     "ember-frost-test": "^1.0.0",
     "ember-hook": "^1.4.1",
     "ember-load-initializers": "^0.6.0",
@@ -62,15 +63,14 @@
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
     "seamless-immutable": "6.1.1",
-    "sinon-chai": "^2.8.0",
-	  "ember-cli-sass": "^5.6.0"
+    "sinon-chai": "^2.8.0"
   },
   "keywords": [
     "ember-addon",
     "frost"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.6",
+    "ember-cli-babel": "^5.1.7",
     "ember-cli-htmlbars": "^1.0.3"
   },
   "ember-addon": {
