--- a/.remarkrc
+++ b/.remarkrc
@@ -2,9 +2,7 @@
   "plugins": {
     "lint": {
       "list-item-indent": false,
-      "maximum-line-length": 119,
-      "no-duplicate-headings": false,
-      "no-multiple-toplevel-headings": false
+      "maximum-line-length": 119
     }
   },
   "settings": {
