--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "ember-source": "~2.12.0",
     "ember-spread": "1.0.0",
     "ember-symbol-observable": "0.1.2",
-    "ember-test-utils": "1.11.0",
+    "ember-test-utils": "^8.0.0",
     "ember-truth-helpers": "1.3.0",
     "ivy-codemirror": "2.0.3",
     "loader.js": "^4.2.3",
